# MyGraphics

./: .gitignore  .gitmodules  CMakeLists.txt  main.cpp
include/: geometryData.h  light.h  primitive.h  renderPipeline.h  shader.h  util.h
shaders/vert/: triangleDemo.vert
src/: CMakeLists.txt  geometryData.cpp  light.cpp  primitive.cpp  renderPipeline.cpp  shader.cpp  util.cpp
